# bioutils

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
lib/: CMakeLists.txt  dataio.cpp  dataio.h  exceptions.cpp  exceptions.h  global.h  pattern.cpp  pattern.h  utils.cpp  utils.h
src/: PatternCount.c  PatternCount.cpp  bpfind.c  bpfind.cpp  bpfind.h  bpseq.cpp  dataio.cpp  dataio.h
src/find/: CMakeLists.txt  find.cpp  find.h
src/seq/: CMakeLists.txt  seq.cpp
tests/: CMakeLists.txt  bench-pattern.cpp  test-find.cpp  test-pattern.cpp
